399- title bar alignment issue fix

--- a/node-app/src/views/core/components/content/title/style.scss
+++ b/node-app/src/views/core/components/content/title/style.scss
@@ -74,5 +74,9 @@
   {
     height:94px;
     background-image:none;
+    margin-top: 12%;
+  }
+  .title-wrapper-yellow-grey-rings{
+    margin-top: 12%;
   }
 }
